// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't conflict with Prettier: message 1`] = `
"No rules that are unnecessary or conflict with Prettier were found.
"
`;

exports[`doesn't conflict with Prettier: success 1`] = `true`;

exports[`lints with the Node config: fixtures/all-00.js 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 14,
      "endColumn": 15,
      "endLine": 30,
      "line": 30,
      "message": "'e' is defined but never used. Allowed unused args must match /^_/u.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 1,
    },
  ],
  "output": "import 'hi';

import a from 'a';
import { b } from 'b';
import c, { c1 } from 'c';
import * as d from 'd';

import e from './e';

export * as f from './f';

export class Example {
  static s = {
    a,
    b,
  };

  m = {};
  #n = null;
  x = 1_000;
  y = 100n;

  hi() {
    _fn() ?? this.byeAsync();
    this.m &&= {};
    Example.s?.a?.();

    try {
      _fn();
    } catch (e) {
      _fn();
    }

    try {
      _fn();
    } catch (_ignored) {
      _fn();
    }

    this.#privateMethod();
  }

  async byeAsync() {
    const f = 1;
    _fn(a, b, c, c1, d, e, f);

    await import('z');

    for await (const v of gen()) {
      _fn(v);
    }
  }

  #privateMethod() {}
}

function _fn() {}

function* gen() {}
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 1,
}
`;

exports[`lints with the Node config: fixtures/all-01.ts 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 3,
      "endColumn": 18,
      "endLine": 18,
      "line": 18,
      "message": "Duplicate name 'm'.",
      "messageId": "unexpected",
      "nodeType": "PropertyDefinition",
      "ruleId": "@typescript-eslint/no-dupe-class-members",
      "severity": 1,
    },
    Object {
      "column": 14,
      "endColumn": 25,
      "endLine": 25,
      "line": 25,
      "message": "'_notIgnored' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 1,
    },
  ],
  "source": "import 'hi';

import a from 'a';
import { b } from 'b';
import c, { c1 } from 'c';
import * as d from 'd';

import e from './e';

@d
export class Example {
  static s = {
    a,
    b,
  };

  m: object = {};
  m: object = {};

  hi(): void {
    _fn();

    try {
      _fn();
    } catch (_notIgnored) {
      _fn();
    }
  }

  async byeAsync(): Promise<void> {
    _fn(a, b, c, c1, d, e);
  }
}

function _fn(...args: any): void {}
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 2,
}
`;

exports[`lints with the Node config: fixtures/all-02.js 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 7,
      "endColumn": 14,
      "endLine": 1,
      "line": 1,
      "message": "'unused1' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 10,
      "endColumn": 17,
      "endLine": 3,
      "line": 3,
      "message": "'unused2' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 9,
      "endColumn": 16,
      "endLine": 4,
      "line": 4,
      "message": "'unused3' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 1,
    },
  ],
  "source": "const unused1 = 0;

function unused2() {
  const unused3 = 'hi';
}
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 3,
}
`;

exports[`lints with the Node config: fixtures/all-03.ts 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 7,
      "endColumn": 16,
      "endLine": 1,
      "line": 1,
      "message": "'tsUnused1' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 10,
      "endColumn": 19,
      "endLine": 3,
      "line": 3,
      "message": "'tsUnused2' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 9,
      "endColumn": 15,
      "endLine": 5,
      "line": 5,
      "message": "'asCast' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 9,
      "endColumn": 25,
      "endLine": 6,
      "line": 6,
      "message": "'angleBracketCast' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "@typescript-eslint/no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 28,
      "endColumn": 37,
      "endLine": 6,
      "line": 6,
      "message": "Use 'as string' instead of '<string>'.",
      "messageId": "as",
      "nodeType": "TSTypeAssertion",
      "ruleId": "@typescript-eslint/consistent-type-assertions",
      "severity": 1,
    },
  ],
  "source": "const tsUnused1 = 0;

function tsUnused2() {
  const x: any = 'hi';
  const asCast = x as string;
  const angleBracketCast = <string>x;
}
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 5,
}
`;

exports[`lints with the Node config: fixtures/all-04.ts 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "output": "export const blah = (): string[] => {
  return ['1'];
};
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Node config: fixtures/all-05.ts 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "output": "export const blah = 3!;
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Node config: fixtures/all-06.ts 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "output": "export const numberTest: number | null = null;
export const booleanTest: boolean | null = null;
export const symbolTest: symbol | null = null;
export const objectTest: object | null = null;
export const stringTest: string | null = null;
export const objectShorthandTest: object | null = null;
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Node config: fixtures/all-07.js 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "output": "import b from 'b';
import c from 'c';

import d from './d';

const a = require('a');
const e = require('e');

export default a + b + c + d + e;
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 0,
}
`;

exports[`lints with the Node config: fixtures/node-00.js 1`] = `
Object {
  "errorCount": 0,
  "fatalErrorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 7,
      "endColumn": 11,
      "endLine": 1,
      "line": 1,
      "message": "'data' is assigned a value but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 1,
    },
    Object {
      "column": 14,
      "endColumn": 28,
      "endLine": 1,
      "line": 1,
      "message": "new Buffer() is deprecated. Use Buffer.from(), Buffer.alloc(), or Buffer.allocUnsafe() instead.",
      "messageId": "deprecated",
      "nodeType": "NewExpression",
      "ruleId": "no-buffer-constructor",
      "severity": 1,
    },
  ],
  "source": "const data = new Buffer(16);
",
  "suppressedMessages": Array [],
  "usedDeprecatedRules": Array [
    Object {
      "replacedBy": Array [],
      "ruleId": "no-buffer-constructor",
    },
  ],
  "warningCount": 2,
}
`;
